Optimize and enhance gradle build process Adding Distributions and Publications