@@ -1,5 +1,7 @@
 plugins {
-    java
+    `java-library`
+    `java-library-distribution`
+    `maven-publish`
 }
 
 group = "stexfires"
@@ -9,12 +11,18 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    implementation("org.jetbrains:annotations:24.0.1")
+}
+
 // Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
         languageVersion.set(JavaLanguageVersion.of(19))
         vendor.set(JvmVendorSpec.ADOPTIUM)
     }
+    withJavadocJar()
+    withSourcesJar()
 }
 
 testing {
@@ -28,6 +36,7 @@ testing {
 }
 
 tasks.withType<JavaCompile>().configureEach {
+    options.javaModuleVersion.set(provider { version as String })
     options.compilerArgs.add("--enable-preview")
     // options.compilerArgs.add("-Xlint:preview")
     //options.compilerArgs.add("-Xlint:unchecked")
@@ -38,13 +47,35 @@ tasks.withType<Test>().configureEach {
     jvmArgs("--enable-preview")
 }
 
-tasks.withType<JavaExec>().configureEach {
-    jvmArgs("--enable-preview")
-}
-
 tasks.withType<Javadoc> {
     val javadocOptions = options as CoreJavadocOptions
 
     javadocOptions.addStringOption("source", "19")
     javadocOptions.addBooleanOption("-enable-preview", true)
+}
+
+tasks.withType<Jar> {
+    manifest {
+        attributes(mapOf("Implementation-Title" to project.name,
+                         "Implementation-Version" to project.version))
+    }
+}
+
+distributions {
+    main {
+        distributionBaseName.set(project.name)
+    }
+}
+
+publishing {
+    publications {
+        create<MavenPublication>("mavenJava") {
+            from(components["java"])
+        }
+    }
+    repositories {
+        maven {
+            url = uri(layout.buildDirectory.dir("repo"))
+        }
+    }
 }
